--- a/package.json
+++ b/package.json
@@ -10,19 +10,34 @@
     "clean": "rimraf dist && mkdir dist"
   },
   "devDependencies": {
+    "@types/node": "^8.0.15",
     "@types/three": "^0.84.18",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "postcss": "^6.0.8",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "rimraf": "^2.6.1",
+    "style-loader": "^0.18.2",
     "ts-loader": "^2.3.1",
     "typescript": "^2.4.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.6.1",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
     "three": "^0.86.0"
   }
 }
