--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "lib": ["DOM","ES6","DOM.Iterable","ScriptHost"]
+    "lib": ["DOM","ES6","DOM.Iterable","ScriptHost"],
+    "jsx": "preserve"
   }
 }
