--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.15",
+    "@types/react": "^15.0.38",
+    "@types/react-dom": "^15.5.1",
+    "@types/react-router-dom": "^4.0.7",
     "@types/three": "^0.84.18",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
@@ -25,6 +28,7 @@
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "rimraf": "^2.6.1",
+    "string-replace-loader": "^1.3.0",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.1",
     "typescript": "^2.4.2",
@@ -35,7 +39,9 @@
   },
   "dependencies": {
     "react": "^15.6.1",
+    "react-async-component": "ctrlplusb/react-async-component#master",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "three": "^0.86.0"
