--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^15.5.1",
     "@types/react-router-dom": "^4.0.7",
     "@types/three": "^0.84.18",
-    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -25,8 +24,8 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "postcss": "^6.0.8",
+    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
-    "precss": "^2.0.0",
     "rimraf": "^2.6.1",
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.18.2",
@@ -38,6 +37,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^15.6.1",
     "react-async-component": "ctrlplusb/react-async-component#master",
     "react-dom": "^15.6.1",
